feat: add kiro-cli auth and opencode compatibility
- Add kiro-cli (AWS SSO OIDC) authentication support
- Remove auth requirement from /v1/models endpoint
- Add script to auto-generate opencode.json config with image modalities

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,11 @@ PROXY_API_KEY="my-super-secret-password-123"
 # The gateway will auto-detect AWS SSO OIDC and use the correct endpoint
 # KIRO_CLI_DB_FILE="~/.local/share/kiro-cli/data.sqlite3"
 
+# Use kiro-cli's current access token directly instead of OIDC refresh
+# This bypasses OIDC refresh issues with cross-region or expired refresh tokens
+# Default: true (recommended)
+# USE_KIRO_CLI_TOKEN=true
+
 # ===========================================
 # OPTION 4: AWS SSO cache file (kiro-cli)
 # ===========================================
